force-app/main/default/objects/PF_Stories__c/PF_Stories__c.object-meta.xml
<CustomObject>
    <description>This is where project stories will be captured within the ProjectForce application.</description>
    <label>Story</label>
    <nameField>
        <label>Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>