force-app/main/default/objects/PF_Stories__c/fields/Copado_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Copado_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copado User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>