force-app/main/default/objects/PF_Stories__c/fields/PF_Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>PF_Acceptance_Criteria__c</fullName>
    <inlineHelpText>Provide the required acceptance criteria to validate this story against. Use the approach of &quot;Given ____ When I do ____ Then ____ &quot;.</inlineHelpText>
    <label>Acceptance Criteria</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>