force-app/main/default/objects/PF_Stories__c/fields/PF_Approved_in_Production_By__c.field-meta.xml
<CustomField>
    <fullName>PF_Approved_in_Production_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user who provided the approval of successful validation in production.</inlineHelpText>
    <label>Approved in Production By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stories4</relationshipName>
    <type>Lookup</type>
</CustomField>