force-app/main/default/objects/PF_Stories__c/fields/PF_Backlog_Rank__c.field-meta.xml
<CustomField>
    <fullName>PF_Backlog_Rank__c</fullName>
    <label>Backlog Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>