force-app/main/default/objects/PF_Stories__c/fields/PF_Change_Control_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>PF_Change_Control_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user who provided the approval of to accept the story into scope.</inlineHelpText>
    <label>Change Control Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>