force-app/main/default/objects/PF_Stories__c/fields/PF_Complete__c.field-meta.xml
<CustomField>
    <fullName>PF_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>