force-app/main/default/objects/PF_Stories__c/fields/PF_Defect__c.field-meta.xml
<CustomField>
    <fullName>PF_Defect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populate for &quot;Change Request&quot; , If raised from a defect.</inlineHelpText>
    <label>Defect</label>
    <referenceTo>PF_Defects__c</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>