force-app/main/default/objects/PF_Stories__c/fields/PF_Design_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>PF_Design_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user who provided the approval of the design proposal.</inlineHelpText>
    <label>Design Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stories2</relationshipName>
    <type>Lookup</type>
</CustomField>