force-app/main/default/objects/PF_Stories__c/fields/PF_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_End_Date__c</fullName>
    <inlineHelpText>Select the end date for this story.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>