force-app/main/default/objects/PF_Stories__c/fields/PF_Epic__c.field-meta.xml
<CustomField>
    <fullName>PF_Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the relevant Customer Journey OR the Architecture Decision for the story.</inlineHelpText>
    <label>CJ</label>
    <referenceTo>PF_Epic__c</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>