force-app/main/default/objects/PF_Stories__c/fields/PF_First_Pass_Count__c.field-meta.xml
<CustomField>
    <fullName>PF_First_Pass_Count__c</fullName>
    <inlineHelpText>Count of Test cases which Passed in first run.</inlineHelpText>
    <label>First Pass Count</label>
    <summaryFilterItems>
        <field>PF_TestCases__c.PF_First_Pass_Rate__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PF_TestCases__c.PF_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>