force-app/main/default/objects/PF_Stories__c/fields/PF_FW_Architectural_Decision__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_Architectural_Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Architectural Decision</label>
    <referenceTo>PF_FW_Architectural_Decision__c</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>