force-app/main/default/objects/PF_Stories__c/fields/PF_Implementation_Approach__c.field-meta.xml
<CustomField>
    <fullName>PF_Implementation_Approach__c</fullName>
    <inlineHelpText>Provide a summary of how you intend to build this solution.</inlineHelpText>
    <label>Implementation Approach</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>