force-app/main/default/objects/PF_Stories__c/fields/PF_Parent_Story__c.field-meta.xml
<CustomField>
    <fullName>PF_Parent_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If there is a related story or this story is marked as a duplicate, identify the parent story here.</inlineHelpText>
    <label>Parent Story</label>
    <referenceTo>PF_Stories__c</referenceTo>
    <relationshipLabel>Sub Stories</relationshipLabel>
    <relationshipName>Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>