force-app/main/default/objects/PF_Stories__c/fields/PF_Sprint__c.field-meta.xml
<CustomField>
    <fullName>PF_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the sprint to assign this story to once the story has been approved.</inlineHelpText>
    <label>Sprint</label>
    <referenceTo>PF_Sprints__c</referenceTo>
    <relationshipLabel>Stories (Sprint)</relationshipLabel>
    <relationshipName>Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>