force-app/main/default/objects/PF_Stories__c/fields/PF_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Start_Date__c</fullName>
    <inlineHelpText>Select the start date for this story.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>