force-app/main/default/objects/PF_Stories__c/fields/PF_Story_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Story_Description__c</fullName>
    <inlineHelpText>Provide a summary level description for the story. Use the approach of &quot;As a ____ I&#39;d like to ____ So that ____ &quot;.</inlineHelpText>
    <label>Story Description</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>