force-app/main/default/objects/PF_Stories__c/fields/PF_Story_Owner__c.field-meta.xml
<CustomField>
    <fullName>PF_Story_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the business owner for this story.</inlineHelpText>
    <label>Story Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>