force-app/main/default/objects/PF_Stories__c/fields/PF_Story_Point_Number__c.field-meta.xml
<CustomField>
    <fullName>PF_Story_Point_Number__c</fullName>
    <formula>VALUE(TEXT(PF_Story_Point__c))</formula>
    <label>Story Point Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>