force-app/main/default/objects/PF_Stories__c/fields/PF_Story_Priority__c.field-meta.xml
<CustomField>
    <fullName>PF_Story_Priority__c</fullName>
    <inlineHelpText>Select the relevant priority for this story.</inlineHelpText>
    <label>Story Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>