force-app/main/default/objects/PF_Stories__c/fields/PF_Story_Status__c.field-meta.xml
<CustomField>
    <fullName>PF_Story_Status__c</fullName>
    <inlineHelpText>Select the status for the story.</inlineHelpText>
    <label>Story Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <color>#78C953</color>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>In Design</fullName>
                <color>#E27001</color>
                <label>In Design</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#A845DC</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Ready for Playback</fullName>
                <color>#A53711</color>
                <label>Ready for Playback</label>
            </value>
            <value>
                <fullName>Playback Approved</fullName>
                <color>#66E9BD</color>
                <label>Playback Approved</label>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
                <color>#0B24BE</color>
                <label>Ready for UAT</label>
            </value>
            <value>
                <fullName>UAT Approved</fullName>
                <color>#419249</color>
                <label>UAT Approved</label>
            </value>
            <value>
                <fullName>UAT Failed</fullName>
                <color>#B6E32E</color>
                <label>UAT Failed</label>
            </value>
            <value>
                <fullName>Migrate to Prod</fullName>
                <color>#641CCF</color>
                <label>Migrate to Prod</label>
            </value>
            <value>
                <fullName>Promoted to Prod</fullName>
                <color>#F96FB7</color>
                <label>Promoted to Prod</label>
            </value>
            <value>
                <fullName>Approved in Prod</fullName>
                <color>#2F5D85</color>
                <label>Approved in Prod</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#AFCADF</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <color>#8F6429</color>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#EFAE73</color>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>