force-app/main/default/objects/PF_Stories__c/fields/PF_Story_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>PF_Story_Status_Reason__c</fullName>
    <inlineHelpText>Please fill this if story status is Out of Scope, Duplicate or Cancelled</inlineHelpText>
    <label>Story Status Reason</label>
    <type>TextArea</type>
</CustomField>