force-app/main/default/objects/PF_Stories__c/fields/PF_Story_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Story_Type__c</fullName>
    <label>Story Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>