force-app/main/default/objects/PF_Stories__c/fields/PF_Testing_Effort__c.field-meta.xml
<CustomField>
    <fullName>PF_Testing_Effort__c</fullName>
    <inlineHelpText>Total Testing effort for this story</inlineHelpText>
    <label>Testing Effort</label>
    <summarizedField>PF_TestCases__c.PF_Total_Testing_Effort__c</summarizedField>
    <summaryForeignKey>PF_TestCases__c.PF_Story__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>