force-app/main/default/objects/PF_Stories__c/fields/PF_Total_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>PF_Total_Actual_Hours__c</fullName>
    <inlineHelpText>Sum of Actual hours spend on all worktasks related to this story</inlineHelpText>
    <label>Total Actual Hours</label>
    <summarizedField>PF_Tasks__c.PF_Actual_Hours__c</summarizedField>
    <summaryForeignKey>PF_Tasks__c.PF_Story__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>