force-app/main/default/objects/PF_Stories__c/fields/PF_Total_Defects__c.field-meta.xml
<CustomField>
    <fullName>PF_Total_Defects__c</fullName>
    <inlineHelpText>Sum of all the defects related to this story</inlineHelpText>
    <label>Total Defects</label>
    <summarizedField>PF_TestCases__c.PF_Total_Defects__c</summarizedField>
    <summaryForeignKey>PF_TestCases__c.PF_Story__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>