force-app/main/default/objects/PF_Stories__c/fields/PF_Total_TC_Executed__c.field-meta.xml
<CustomField>
    <fullName>PF_Total_TC_Executed__c</fullName>
    <inlineHelpText>Sum of all the Executed Test cases</inlineHelpText>
    <label>Total TC (Executed)</label>
    <summarizedField>PF_TestCases__c.PF_Total_Test_Case_Execution__c</summarizedField>
    <summaryForeignKey>PF_TestCases__c.PF_Story__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>