force-app/main/default/objects/PF_Stories__c/fields/PF_Total_TC_Written__c.field-meta.xml
<CustomField>
    <fullName>PF_Total_TC_Written__c</fullName>
    <inlineHelpText>Sum of Total Test Cases written related to this story.</inlineHelpText>
    <label>Total TC (Written)</label>
    <summaryFilterItems>
        <field>PF_TestCases__c.PF_SIT__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PF_TestCases__c.PF_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>