force-app/main/default/objects/PF_Stories__c/fields/PF_UAT_Passed_By__c.field-meta.xml
<CustomField>
    <fullName>PF_UAT_Passed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user who provided the approval of successful validation during UAT.</inlineHelpText>
    <label>UAT Passed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stories3</relationshipName>
    <type>Lookup</type>
</CustomField>