force-app/main/default/objects/PF_Stories__c/recordTypes/PF_Story.recordType-meta.xml
<RecordType>
    <fullName>PF_Story</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Story</label>
</RecordType>