force-app/main/default/objects/PF_Stories__c/listViews/PF_All.listView-meta.xml
<ListView>
    <fullName>PF_All</fullName>
    <columns>NAME</columns>
    <columns>PF_Story_Number__c</columns>
    <columns>PF_Start_Date__c</columns>
    <columns>PF_End_Date__c</columns>
    <columns>PF_Story_Status__c</columns>
    <columns>PF_Story_Point__c</columns>
    <columns>PF_Story_Owner__c</columns>
    <columns>PF_Sprint__c</columns>
    <columns>PF_Epic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>