force-app/main/default/objects/PF_Stories__c/listViews/PF_All_Stories_I_m_Marked_as_Story_Owner.listView-meta.xml
<ListView>
    <fullName>PF_All_Stories_I_m_Marked_as_Story_Owner</fullName>
    <columns>NAME</columns>
    <columns>PF_Story_Number__c</columns>
    <columns>PF_Start_Date__c</columns>
    <columns>PF_End_Date__c</columns>
    <columns>PF_Story_Status__c</columns>
    <columns>PF_Story_Point__c</columns>
    <columns>PF_Story_Owner__c</columns>
    <columns>PF_Sprint__c</columns>
    <columns>PF_Epic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PF_Story_Current_User__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>All Stories I&#39;m Marked as Story Owner</label>
</ListView>