force-app/main/default/objects/PF_Stories__c/listViews/PF_Backlog.listView-meta.xml
<ListView>
    <fullName>PF_Backlog</fullName>
    <columns>NAME</columns>
    <columns>PF_Story_Number__c</columns>
    <columns>PF_Backlog_Rank__c</columns>
    <columns>PF_Story_Status__c</columns>
    <columns>PF_Story_Point__c</columns>
    <columns>PF_Story_Owner__c</columns>
    <columns>PF_Epic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PF_Sprint__c</field>
        <operation>equals</operation>
    </filters>
    <label>Backlog</label>
</ListView>